<resources>
    <string name="app_name">ProjetoFeevale</string>
    <string name="title_activity_camera">Câmera</string>
    <string name="title_activity_numerosde_contato">Números de Contato</string>
    <string name="title_activity_fullscreen">Meus Pins</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Página Inicial</string>
    <string name="nav_meuspins">Meus Pins</string>
    <string name="nav_contatos">Contatos</string>
    <string name="nav_account">Conta</string>
    <string name="nav_return">Voltar</string>
    <string name="nav_add_pin">Adicionar Ocorrência</string>
    <string name="add_pin_img_upload_title">Selecionar Imagens</string>
    <string name="add_pin_img_upload_tooltip">Selecione a imagem da ocorrência</string>
    <string name="add_pin_img_upload_button_label">Selecionar Imagem</string>
    <string name="add_pin_info_assignment_title">Dados da Ocorrência</string>
    <string name="add_pin_info_assignment_tooltip">Campos com * são obrigatórios</string>
    <string name="add_pin_info_assignment_field_address">Endereço*</string>
    <string name="add_pin_info_assignment_field_type">Tipo de Ocorrência*</string>
    <string name="add_pin_info_assignment_field_date">Data da Ocorrência*</string>
    <string name="add_pin_info_assignment_field_date_hint">Data e Hora da Ocorrência</string>
    <string name="add_pin_info_assignment_field_date_button">SELECIONAR DATA E HORA</string>
    <string name="add_pin_info_assignment_field_additional_info">Informações adicionais</string>
    <string name="add_pin_identification_title">Identificação da Ocorrência</string>
    <string name="add_pin_identification_tooltip">Breve informação para ocorrência</string>
    <string name="add_pin_identification_tooltip_required">Campos com * são obrigatórios</string>
    <string name="add_pin_identification_field_name">Nome da Ocorrência*</string>
    <string name="add_pin_identification_field_description">Descrição da Ocorrência</string>
    <string name="map_add_pin_content_description">Adicionar Marcador</string>
    <string name="search">Search</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="fab">fab</string>
    <string name="bottom_bar">Bottom Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
</resources>