<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_menu"
        android:title="@string/search"
        android:backgroundTint="@color/white"
        android:tintMode="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/phone"
        android:icon="@drawable/ic_call"
        android:tintMode="@color/white"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/option_1"
        android:title="@string/option_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_2"
        android:title="@string/option_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/fab"
        android:title="@string/fab" />


</menu>