<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scroll_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="256dp"
            android:layout_gravity="center"
            android:text="@string/add_pin_info_assignment_title"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_upload_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="256dp"
                android:layout_gravity="center"
                android:text="@string/add_pin_info_assignment_tooltip"
                android:textSize="14sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginVertical="20dp"/>

            <!-- Campo Endereço -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:id="@+id/occurrenceAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <AutoCompleteTextView
                    android:id="@+id/occurrenceAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="Digite o endereço"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- Campo Tipo de Ocorrência -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:id="@+id/occurrenceTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_type"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <Spinner
                    android:id="@+id/occurrenceType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    android:entries="@array/tipos_de_ocorrencia"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:id="@+id/occurrenceDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/occurrenceDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:hint="@string/add_pin_info_assignment_field_date_hint"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    tools:ignore="TextFields" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
