<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scroll_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="256dp"
            android:layout_gravity="center"
            android:text="@string/add_pin_info_assignment_title"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_upload_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="256dp"
                android:layout_gravity="center"
                android:text="@string/add_pin_info_assignment_tooltip"
                android:textSize="14sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginVertical="20dp"/>

            <!-- Campo Endereço -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite o endereço"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- Campo Tipo de Ocorrência -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_type"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    android:entries="@array/tipos_de_ocorrencia"
                    />
            </LinearLayout>

            <!-- Campo Data e Hora de Início -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:id="@+id/textDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:text="@string/add_pin_info_assignment_field_date"
                    android:clickable="true"
                    android:focusable="true"/>

                <Button
                    android:id="@+id/buttonDateTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_date_button"
                    android:background="@drawable/button_square_disabled"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:paddingHorizontal="16dp"/>
            </LinearLayout>

            <!-- Campo Informações Adicionais -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_info_assignment_field_additional_info"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/editTextAdditionalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Escreva aqui informações adicionais sobre a ocorrência"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>