<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scroll_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_pin_img_upload_title"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/upload_image"
                android:layout_width="wrap_content"
                android:layout_height="198dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_add_photo"
                android:padding="48dp"
                android:background="@drawable/frame_image_view"
                android:outlineProvider="background"
                />

            <TextView
                android:id="@+id/form_upload_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="256dp"
                android:layout_gravity="center"
                android:text="@string/add_pin_img_upload_tooltip"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginVertical="20dp"/>

            <Button
                android:id="@+id/upload_image_button"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_enabled"
                android:text="@string/add_pin_img_upload_button_label"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>