<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scroll_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="298dp"
            android:layout_gravity="center"
            android:text="@string/add_pin_identification_title"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_upload_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="256dp"
                android:layout_gravity="center"
                android:text="@string/add_pin_identification_tooltip"
                android:textSize="14sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginVertical="20dp"/>

            <!-- Campo Nome -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_identification_field_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite o nome da ocorrência"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <!-- Campo Descrição -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pin_identification_field_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/editTextAdditionalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Descreva brevemente o motivo da ocorrência"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/form_step_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"

                android:orientation="horizontal">


                <!-- Botão Próximo -->
                <android.widget.Button
                    android:id="@+id/bttConfirmar3"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="Confirmar"
                    style="@style/ButtonEnabled"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>